review intro linear systems, triangular matrices/systems

--- a/Content/triangular_matrices_part1.ipynb
+++ b/Content/triangular_matrices_part1.ipynb
@@ -20,11 +20,11 @@
    "source": [
     "$$\\mathbf{U} \n",
     "= \\left[ \\begin{array}{ccccc}\n",
-    "u_{11} & u_{12} & u_{13} & \\cdots & u_{1N} \\\\\n",
-    "       & u_{22} & u_{23} & \\cdots & u_{2N} \\\\\n",
-    "       &        & u_{33} & \\cdots & u_{3N}  \\\\\n",
+    "u_{00} & u_{01} & u_{02} & \\cdots & u_{0(N-1)} \\\\\n",
+    "       & u_{11} & u_{12} & \\cdots & u_{1(N-1)} \\\\\n",
+    "       &        & u_{22} & \\cdots & u_{2(N-1)}  \\\\\n",
     "       &        &        & \\ddots & \\vdots  \\\\\n",
-    "       &        &        &        & u_{NN}\n",
+    "       &        &        &        & u_{(N-1)(N-1)}\n",
     "\\end{array} \\right]\n",
     "$$"
    ]
@@ -40,13 +40,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mathbf{L} \n",
+    "$$\n",
+    "\\mathbf{L} \n",
     "= \\left[ \\begin{array}{ccccc}\n",
-    "l_{11} & & & & \\\\\n",
+    "l_{00} & & & & \\\\\n",
     "\\vdots & \\ddots & & & \\\\\n",
-    "l_{N-2 \\, 1} & \\cdots & l_{N-2\\,N-2} & &\\\\\n",
-    "l_{N-1 \\, 1} & \\cdots & l_{N-1\\,N-2} & l_{N-1\\,N-1} &\\\\\n",
-    "l_{N1} & \\cdots & l_{N\\,N-2} & l_{N\\,N-1} & l_{N\\,N}\n",
+    "l_{(N-3)0} & \\cdots & l_{(N-3)(N-3)} & &\\\\\n",
+    "l_{(N-2)0} & \\cdots & l_{(N-2)(N-3)} & l_{(N-2)(N-2)} &\\\\\n",
+    "l_{(N-1)0} & \\cdots & l_{(N-1)(N-3)} & l_{(N-1)(N-2)} & l_{(N-1)(N-1)}\n",
     "\\end{array} \\right] \\: .\n",
     "$$"
    ]
@@ -71,9 +72,9 @@
    "source": [
     "$$\\mathbf{x} = \n",
     "\\left[ \\begin{array}{c}\n",
-    "x_{1} \\\\\n",
+    "x_{0} \\\\\n",
     "\\vdots \\\\\n",
-    "x_{N}\n",
+    "x_{(N-1)}\n",
     "\\end{array} \\right] \\: .\n",
     "$$"
    ]
@@ -91,8 +92,8 @@
    "source": [
     "**Algorithm 1**\n",
     "    \n",
-    "    for i = 1:N\n",
-    "        for j = 1:N\n",
+    "    for i = 0:N-1\n",
+    "        for j = 0:N-1\n",
     "            y[i] = y[i] + U[i,j]*x[j]"
    ]
   },
@@ -102,8 +103,8 @@
    "source": [
     "**Algorithm 2**\n",
     "    \n",
-    "    for i = 1:N\n",
-    "        for j = i:N\n",
+    "    for i = 0:N-1\n",
+    "        for j = i:N-1\n",
     "            y[i] = y[i] + U[i,j]*x[j]"
    ]
   },
@@ -113,7 +114,7 @@
    "source": [
     "**Algorithm 3**\n",
     "\n",
-    "    for i = 1:N\n",
+    "    for i = 0:N-1\n",
     "        y[i] = dot(U[i,i:],x[i:])"
    ]
   },
@@ -123,8 +124,8 @@
    "source": [
     "**Algorithm 4**\n",
     "\n",
-    "    for j = 1:N\n",
-    "        for i = 1:j\n",
+    "    for j = 0:N-1\n",
+    "        for i = 0:j\n",
     "            y[i] = y[i] + U[i,j]*x[j]"
    ]
   },
@@ -134,7 +135,7 @@
    "source": [
     "**Algorithm 5**\n",
     "\n",
-    "    for j = 1:N\n",
+    "    for j = 0:N-1\n",
     "        y[:j] = y[:j] + U[:j,j]*x[j]"
    ]
   },
@@ -151,8 +152,8 @@
    "source": [
     "**Algorithm 6**\n",
     "    \n",
-    "    for i = 1:N\n",
-    "        for j = 1:N\n",
+    "    for i = 0:N-1\n",
+    "        for j = 0:N-1\n",
     "            z[i] = z[i] + L[i,j]*x[j]"
    ]
   },
@@ -162,8 +163,8 @@
    "source": [
     "**Algorithm 7**\n",
     "    \n",
-    "    for i = 1:N\n",
-    "        for j = 1:i\n",
+    "    for i = 0:N-1\n",
+    "        for j = 0:i\n",
     "            z[i] = z[i] + L[i,j]*x[j]"
    ]
   },
@@ -173,7 +174,7 @@
    "source": [
     "**Algorithm 8**\n",
     "\n",
-    "    for i = 1:N\n",
+    "    for i = 0:N-1\n",
     "        z[i] = dot(L[i,:i],x[:i])"
    ]
   },
@@ -183,8 +184,8 @@
    "source": [
     "**Algorithm 9**\n",
     "\n",
-    "    for j = 1:N\n",
-    "        for i = j:N\n",
+    "    for j = 0:N-1\n",
+    "        for i = j:N-1\n",
     "            z[i] = z[i] + L[i,j]*x[j]"
    ]
   },
@@ -194,7 +195,7 @@
    "source": [
     "**Algorithm 10**\n",
     "\n",
-    "    for j = 1:N\n",
+    "    for j = 0:N-1\n",
     "        z[j:] = z[j:] + L[j:,j]*x[j]"
    ]
   },
@@ -378,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
