--- a/Content/triangular_matrices_part2.ipynb
+++ b/Content/triangular_matrices_part2.ipynb
@@ -18,15 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\mathbf{U} =\n",
-    "\\begin{bmatrix}\n",
-    "u_{11} & u_{12} & u_{13} & \\cdots & u_{1N} \\\\\n",
-    "       & u_{22} & u_{23} & \\cdots & u_{2N} \\\\\n",
-    "       &        & u_{33} & \\cdots & u_{3N}  \\\\\n",
+    "$$\\mathbf{U} \n",
+    "= \\left[ \\begin{array}{ccccc}\n",
+    "u_{00} & u_{01} & u_{02} & \\cdots & u_{0(N-1)} \\\\\n",
+    "       & u_{11} & u_{12} & \\cdots & u_{1(N-1)} \\\\\n",
+    "       &        & u_{22} & \\cdots & u_{2(N-1)}  \\\\\n",
     "       &        &        & \\ddots & \\vdots  \\\\\n",
-    "       &        &        &        & u_{NN}\n",
-    "\\end{bmatrix}\n",
+    "       &        &        &        & u_{(N-1)(N-1)}\n",
+    "\\end{array} \\right]\n",
     "$$"
    ]
   },
@@ -41,14 +40,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mathbf{L} \n",
-    "= \\begin{bmatrix}\n",
-    "l_{11} & & & & \\\\\n",
+    "$$\n",
+    "\\mathbf{L} \n",
+    "= \\left[ \\begin{array}{ccccc}\n",
+    "l_{00} & & & & \\\\\n",
     "\\vdots & \\ddots & & & \\\\\n",
-    "l_{N-2 \\, 1} & \\cdots & l_{N-2\\,N-2} & &\\\\\n",
-    "l_{N-1 \\, 1} & \\cdots & l_{N-1\\,N-2} & l_{N-1\\,N-1} &\\\\\n",
-    "l_{N1} & \\cdots & l_{N\\,N-2} & l_{N\\,N-1} & l_{N\\,N}\n",
-    "\\end{bmatrix} \\: .\n",
+    "l_{(N-3)0} & \\cdots & l_{(N-3)(N-3)} & &\\\\\n",
+    "l_{(N-2)0} & \\cdots & l_{(N-2)(N-3)} & l_{(N-2)(N-2)} &\\\\\n",
+    "l_{(N-1)0} & \\cdots & l_{(N-1)(N-3)} & l_{(N-1)(N-2)} & l_{(N-1)(N-1)}\n",
+    "\\end{array} \\right] \\: .\n",
     "$$"
    ]
   },
@@ -65,16 +65,16 @@
    "source": [
     "$$\n",
     "\\mathbf{u} = \\begin{bmatrix}\n",
+    "u_{00} \\\\\n",
+    "u_{01} \\\\\n",
+    "\\vdots \\\\\n",
+    "u_{0(N-1)} \\\\\n",
     "u_{11} \\\\\n",
     "u_{12} \\\\\n",
     "\\vdots \\\\\n",
-    "u_{1N} \\\\\n",
-    "u_{22} \\\\\n",
-    "u_{23} \\\\\n",
+    "u_{1(N-1)} \\\\\n",
     "\\vdots \\\\\n",
-    "u_{2N} \\\\\n",
-    "\\vdots \\\\\n",
-    "u_{NN}\n",
+    "u_{(N-1)(N-1)}\n",
     "\\end{bmatrix}_{N(N+1) / 2 \\times 1}\n",
     "$$"
    ]
@@ -92,17 +92,17 @@
    "source": [
     "$$\n",
     "\\mathbf{l} = \\begin{bmatrix}\n",
+    "l_{00} \\\\\n",
+    "l_{10} \\\\\n",
     "l_{11} \\\\\n",
+    "l_{20} \\\\\n",
     "l_{21} \\\\\n",
     "l_{22} \\\\\n",
-    "l_{31} \\\\\n",
-    "l_{32} \\\\\n",
+    "l_{30} \\\\\n",
+    "\\vdots \\\\\n",
     "l_{33} \\\\\n",
-    "l_{41} \\\\\n",
     "\\vdots \\\\\n",
-    "l_{44} \\\\\n",
-    "\\vdots \\\\\n",
-    "l_{NN}\n",
+    "l_{(N-1)(N-1)}\n",
     "\\end{bmatrix}_{N(N+1) / 2 \\times 1} \\quad .\n",
     "$$"
    ]
@@ -120,9 +120,9 @@
    "source": [
     "$$\\mathbf{x} = \n",
     "\\left[ \\begin{array}{c}\n",
-    "x_{1} \\\\\n",
+    "x_{0} \\\\\n",
     "\\vdots \\\\\n",
-    "x_{N}\n",
+    "x_{(N-1)}\n",
     "\\end{array} \\right] \\: .\n",
     "$$"
    ]
@@ -169,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
