--- a/Content/triangular_systems.ipynb
+++ b/Content/triangular_systems.ipynb
@@ -48,9 +48,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = N:1:-1\n",
+    "    for i = N-1:0:-1\n",
     "        x[i] = y[i]\n",
-    "        for j = i+1:N\n",
+    "        for j = i+1:N-1\n",
     "            x[i] = x[i] - A[i,j]*x[j]\n",
     "        x[i] = x[i]/A[i,i]"
    ]
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = N:1:-1\n",
+    "    for i = N-1:0:-1\n",
     "        x[i] = y[i] - dot(A[i,i+1:],x[i+1:])\n",
     "        x[i] = x[i]/A[i,i]"
    ]
@@ -82,9 +82,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = 1:N\n",
+    "    for i = 0:N-1\n",
     "        x[i] = y[i]\n",
-    "        for j = 1:i-1\n",
+    "        for j = 0:i-1\n",
     "            x[i] = x[i] - A[i,j]*x[j]\n",
     "        x[i] = x[i]/A[i,i]"
    ]
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = 1:N\n",
+    "    for i = 0:N-1\n",
     "        x[i] = y[i] - dot(A[i,:i-1],x[:i-1])\n",
     "        x[i] = x[i]/A[i,i]"
    ]
@@ -133,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -144,34 +142,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "N = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 3.24  5.16  1.06  0.57  1.35]\n",
-      " [ 0.01  5.87  0.11  4.96  0.56]\n",
-      " [ 9.75  7.57  0.58  0.95  4.34]\n",
-      " [ 0.15  3.27  6.49  1.05  4.11]\n",
-      " [ 9.03  2.29  2.46  6.55  6.69]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = 10*np.around(np.random.rand(N,N), decimals=3)\n",
-    "print A"
    ]
   },
   {
@@ -183,13 +157,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.81   0.5    0.677  0.827  0.161]\n"
+      "[[0.85 3.54 5.32 2.22 3.9 ]\n",
+      " [3.62 4.76 5.34 9.46 2.19]\n",
+      " [3.36 0.72 5.16 8.16 7.52]\n",
+      " [9.62 4.24 1.45 8.96 1.42]\n",
+      " [1.23 6.64 2.51 2.98 2.12]]\n"
      ]
     }
    ],
    "source": [
-    "y = np.around(np.random.rand(N), decimals=3)\n",
-    "print y"
+    "A = 10*np.around(np.random.rand(N,N), decimals=3)\n",
+    "print(A)"
    ]
   },
   {
@@ -201,17 +179,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3.24  0.    0.    0.    0.  ]\n",
-      " [ 0.01  5.87  0.    0.    0.  ]\n",
-      " [ 9.75  7.57  0.58  0.    0.  ]\n",
-      " [ 0.15  3.27  6.49  1.05  0.  ]\n",
-      " [ 9.03  2.29  2.46  6.55  6.69]]\n"
+      "[0.476 0.176 0.543 0.313 0.937]\n"
      ]
     }
    ],
    "source": [
-    "L = np.tril(A)\n",
-    "print L"
+    "y = np.around(np.random.rand(N), decimals=3)\n",
+    "print(y)"
    ]
   },
   {
@@ -223,17 +197,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3.24  5.16  1.06  0.57  1.35]\n",
-      " [ 0.    5.87  0.11  4.96  0.56]\n",
-      " [ 0.    0.    0.58  0.95  4.34]\n",
-      " [ 0.    0.    0.    1.05  4.11]\n",
-      " [ 0.    0.    0.    0.    6.69]]\n"
+      "[[0.85 0.   0.   0.   0.  ]\n",
+      " [3.62 4.76 0.   0.   0.  ]\n",
+      " [3.36 0.72 5.16 0.   0.  ]\n",
+      " [9.62 4.24 1.45 8.96 0.  ]\n",
+      " [1.23 6.64 2.51 2.98 2.12]]\n"
      ]
     }
    ],
    "source": [
-    "U = np.triu(A)\n",
-    "print U"
+    "L = np.tril(A)\n",
+    "print(L)"
    ]
   },
   {
@@ -245,12 +219,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  0.25         0.08475298  -4.14151736  26.08648134 -24.3600754 ]\n"
+      "[[0.85 3.54 5.32 2.22 3.9 ]\n",
+      " [0.   4.76 5.34 9.46 2.19]\n",
+      " [0.   0.   5.16 8.16 7.52]\n",
+      " [0.   0.   0.   8.96 1.42]\n",
+      " [0.   0.   0.   0.   2.12]]\n"
      ]
     }
    ],
    "source": [
-    "print np.linalg.solve(L,y)"
+    "U = np.triu(A)\n",
+    "print(U)"
    ]
   },
   {
@@ -262,12 +241,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.96330096 -0.50025329 -0.14860906  0.69341875  0.02406577]\n"
+      "[ 0.56       -0.38890756 -0.20515243 -0.34908046  2.06874462]\n"
      ]
     }
    ],
    "source": [
-    "print np.linalg.solve(U,y)"
+    "print(np.linalg.solve(L,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.20700047  0.44567491 -0.48336732 -0.03511308  0.44198113]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.linalg.solve(U,y))"
    ]
   },
   {
@@ -336,9 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -359,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
