review Gaussian elimination

--- a/Content/gauss-elim-outer.ipynb
+++ b/Content/gauss-elim-outer.ipynb
@@ -24,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -35,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "A = np.array([[2.,1.,-1.],\n",
@@ -48,9 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "y = np.array([8., -11., -3.])"
@@ -66,9 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = np.linalg.solve(A,y)"
@@ -88,7 +80,7 @@
     }
    ],
    "source": [
-    "print x"
+    "print(x)"
    ]
   },
   {
@@ -137,12 +129,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Calculate the factor $t^{(1)}_{2} = \\frac{a_{21}}{a_{11}}$\n",
-    "2. Multiply the first row of $\\mathbf{A}$ by the factor $t^{(1)}_{2}$ and subtract the result from the second row of $\\mathbf{A}$\n",
-    "3. Multiply the first element of $\\mathbf{y}$ by the factor $t^{(1)}_{2}$ and subtract the result from the second element of $\\mathbf{y}$\n",
-    "4. Calculate the factor $t^{(1)}_{3} = \\frac{a_{31}}{a_{11}}$\n",
-    "5. Multiply the first row of $\\mathbf{A}$ by the factor $t^{(1)}_{3}$ and subtract the result from the third row of $\\mathbf{A}$\n",
-    "6. Multiply the first element of $\\mathbf{y}$ by the factor $t^{(1)}_{3}$ and subtract the result from the third element of $\\mathbf{y}$"
+    "1. Calculate the factor $t^{(1)}_{1} = \\frac{a_{10}}{a_{00}}$\n",
+    "2. Multiply the first row of $\\mathbf{A}$ by the factor $t^{(1)}_{1}$ and subtract the result from the second row of $\\mathbf{A}$\n",
+    "3. Multiply the first element of $\\mathbf{y}$ by the factor $t^{(1)}_{1}$ and subtract the result from the second element of $\\mathbf{y}$\n",
+    "4. Calculate the factor $t^{(1)}_{2} = \\frac{a_{20}}{a_{00}}$\n",
+    "5. Multiply the first row of $\\mathbf{A}$ by the factor $t^{(1)}_{2}$ and subtract the result from the third row of $\\mathbf{A}$\n",
+    "6. Multiply the first element of $\\mathbf{y}$ by the factor $t^{(1)}_{2}$ and subtract the result from the third element of $\\mathbf{y}$"
    ]
   },
   {
@@ -155,21 +147,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "A1 = np.copy(A)\n",
     "y1 = np.copy(y)\n",
     "\n",
-    "t12 = A[1,0]/A[0,0]    # step 1\n",
-    "A1[1,:] -= t12*A[0,:]  # step 2\n",
-    "y1[1] -= t12*y[0]      # step 3\n",
+    "t11 = A[1,0]/A[0,0]    # step 1\n",
+    "A1[1,:] -= t11*A[0,:]  # step 2\n",
+    "y1[1] -= t11*y[0]      # step 3\n",
     "\n",
-    "t13 = A[2,0]/A[0,0]    # step 4\n",
-    "A1[2,:] -= t13*A[0,:]  # step 5\n",
-    "y1[2] -= t13*y[0]      # step 6"
+    "t12 = A[2,0]/A[0,0]    # step 4\n",
+    "A1[2,:] -= t12*A[0,:]  # step 5\n",
+    "y1[2] -= t12*y[0]      # step 6"
    ]
   },
   {
@@ -188,7 +178,7 @@
     }
    ],
    "source": [
-    "print A1"
+    "print(A1)"
    ]
   },
   {
@@ -200,12 +190,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 8.  1.  5.]\n"
+      "[8. 1. 5.]\n"
      ]
     }
    ],
    "source": [
-    "print y1"
+    "print(y1)"
    ]
   },
   {
@@ -252,9 +242,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Calculate the factor $t^{(2)}_{3} = \\frac{a_{32}^{(1)}}{a_{22}^{(1)}}$\n",
-    "2. Multiply the second row of $\\mathbf{A}^{(1)}$ by the factor $t^{(2)}_{3}$ and subtract the result from the third row of $\\mathbf{A}^{(1)}$\n",
-    "3. Multiply the second element of $\\mathbf{y}^{(1)}$ by the factor $t^{(2)}_{3}$ and subtract the result from the third element of $\\mathbf{y}^{(1)}$"
+    "1. Calculate the factor $t^{(2)}_{2} = \\frac{a_{21}^{(1)}}{a_{11}^{(1)}}$\n",
+    "2. Multiply the second row of $\\mathbf{A}^{(1)}$ by the factor $t^{(2)}_{2}$ and subtract the result from the third row of $\\mathbf{A}^{(1)}$\n",
+    "3. Multiply the second element of $\\mathbf{y}^{(1)}$ by the factor $t^{(2)}_{2}$ and subtract the result from the third element of $\\mathbf{y}^{(1)}$"
    ]
   },
   {
@@ -267,17 +257,15 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "A2 = np.copy(A1)\n",
     "y2 = np.copy(y1)\n",
     "\n",
-    "t23 = A1[2,1]/A1[1,1]  # step 1\n",
-    "A2[2,:] -= t23*A1[1,:]  # step 2\n",
-    "y2[2] -= t23*y1[1]      # step 3"
+    "t22 = A1[2,1]/A1[1,1]  # step 1\n",
+    "A2[2,:] -= t22*A1[1,:]  # step 2\n",
+    "y2[2] -= t22*y1[1]      # step 3"
    ]
   },
   {
@@ -296,7 +284,7 @@
     }
    ],
    "source": [
-    "print A2"
+    "print(A2)"
    ]
   },
   {
@@ -308,12 +296,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 8.  1.  1.]\n"
+      "[8. 1. 1.]\n"
      ]
     }
    ],
    "source": [
-    "print y2"
+    "print(y2)"
    ]
   },
   {
@@ -326,9 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "xeq = np.linalg.solve(A2,y2)"
@@ -358,18 +344,16 @@
     }
    ],
    "source": [
-    "print xeq\n",
-    "print '\\n'\n",
-    "print x"
+    "print(xeq)\n",
+    "print('\\n')\n",
+    "print(x)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, stop. Take a deep breath. Wait 10 seconds...\n",
-    "\n",
-    "The proccess of calculating $\\mathbf{A}^{(1)}$, $\\mathbf{y}^{(1)}$, $\\mathbf{A}^{(2)}$ and $\\mathbf{y}^{(2)}$ can be represented by an iterative outer product update!"
+    "Notice that the proccess of calculating $\\mathbf{A}^{(1)}$, $\\mathbf{y}^{(1)}$, $\\mathbf{A}^{(2)}$ and $\\mathbf{y}^{(2)}$ can be represented by an iterative outer product update."
    ]
   },
   {
@@ -404,28 +388,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mathbf{M}^{(k)} = \\mathbf{t}^{(k)} \\cdot (\\mathbf{u}^{(k)})^{\\top} \\: ,$$"
+    "$$\\mathbf{M}^{(k)} = \\mathbf{t}^{(k)} \\cdot \\left( \\mathbf{u}^{(k-1)} \\right)^{\\top} \\: ,$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{u}^{(k)}$ is a $3 \\times 1$ vector with all elements equal to $0$, except the $k$th element, which is equal to $1$, and $\\mathbf{t}^{(k)}$ is a $3 \\times 1$ vector whose $i$th element $t_{i}^{(k)}$ is given by:"
+    "$\\mathbf{u}^{(k-1)}$ is a $3 \\times 1$ vector with all elements equal to $0$, except the element $k-1$, which is equal to $1$, and $\\mathbf{t}^{(k)}$ is a $3 \\times 1$ vector whose $i$th element $t_{i}^{(k)}$ is given by:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$t_{i}^{(k)} = \\begin{cases} 0 & \\quad \\text{if } i \\le k \\\\\\\\ \\dfrac{a^{(k-1)}_{ik}}{a^{(k-1)}_{kk}} & \\quad \\text{if } i \\gt k\\\\ \\end{cases} \\: ,$"
+    "$t_{i}^{(k)} = \\begin{cases} 0 & \\quad \\text{if } i < k \\\\\\\\ \\dfrac{a^{(k-1)}_{ik}}{a^{(k-1)}_{kk}} & \\quad \\text{if } i \\ge k\\\\ \\end{cases} \\: ,$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $a^{(k-1)}_{ij}$ is the $ij$ element of the matrix $\\mathbf{A}^{(k-1)}$."
+    "where $a^{(k-1)}_{ij}$ is the $ij$ element of the matrix $\\mathbf{A}^{(k-1)}$. In matrix form, the non-null elements of $\\mathbf{t}^{(k)}$ are given by:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{t}^{(k)}[k:] = \\frac{1}{\\mathbf{A}[k-1, k-1]} \\mathbf{A}^{(k-1)}[k:] \\quad .\n",
+    "$$"
    ]
   },
   {
@@ -439,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the number of iterations needed for transforming the original system $\\mathbf{A}\\mathbf{x} = \\mathbf{y}$ into the equivalent triangular system $\\mathbf{B}\\mathbf{x} = \\mathbf{z}$ is equal to $2 = 3 - 1$, where $3$ is the order of the square matrix $\\mathbf{A}$."
+    "Notice that the number of iterations needed for transforming the original system $\\mathbf{A}\\mathbf{x} = \\mathbf{y}$ into the equivalent triangular system $\\mathbf{B}\\mathbf{x} = \\mathbf{z}$ is equal to $N - 1$, where $N$ is the order of the square matrix $\\mathbf{A}$."
    ]
   },
   {
@@ -459,9 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "I = np.identity(3)"
@@ -477,34 +463,28 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "u = np.array([1., 0., 0.])"
+    "u0 = np.array([1., 0., 0.])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "t = np.array([0., A[1][0]/A[0][0], A[2][0]/A[0][0]])"
+    "t1 = np.array([0., A[1][0]/A[0][0], A[2][0]/A[0][0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "A1 = (I - np.outer(t, u)).dot(A)"
+    "A1 = (I - np.outer(t1, u0)).dot(A)"
    ]
   },
   {
@@ -513,51 +493,60 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 2. ,  1. , -1. ],\n",
-       "       [ 0. ,  0.5,  0.5],\n",
-       "       [ 0. ,  2. ,  1. ]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  -1.5 -1. ]\n"
+     ]
     }
    ],
    "source": [
-    "A1"
+    "print(t1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.   1.  -1. ]\n",
+      " [ 0.   0.5  0.5]\n",
+      " [ 0.   2.   1. ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "y1 = (I - np.outer(t, u)).dot(y)"
+    "print(A1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "y1 = (I - np.outer(t1, u0)).dot(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 8.,  1.,  5.])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8. 1. 5.]\n"
+     ]
     }
    ],
    "source": [
-    "y1"
+    "print(y1)"
    ]
   },
   {
@@ -570,34 +559,19 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "u = np.array([0., 1., 0.])"
+    "u1 = np.array([0., 1., 0.])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "t = np.array([0., 0., A1[2][1]/A1[1][1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "B = (I - np.outer(t, u)).dot(A1)"
+    "t2 = np.array([0., 0., A1[2][1]/A1[1][1]])"
    ]
   },
   {
@@ -606,82 +580,52 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 2. ,  1. , -1. ],\n",
-       "       [ 0. ,  0.5,  0.5],\n",
-       "       [ 0. ,  0. , -1. ]])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 4.]\n"
+     ]
     }
    ],
    "source": [
-    "B"
+    "print(t2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "z = (I - np.outer(t, u)).dot(y1)"
+    "B = (I - np.outer(t2, u1)).dot(A1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 8.,  1.,  1.])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Solution of this equivalent triangular system:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2.  3. -1.]\n"
+      "[[ 2.   1.  -1. ]\n",
+      " [ 0.   0.5  0.5]\n",
+      " [ 0.   0.  -1. ]]\n"
      ]
     }
    ],
    "source": [
-    "print np.linalg.solve(B,z)"
+    "print(B)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Solution of the original system:"
+    "z = (I - np.outer(t2, u1)).dot(y1)"
    ]
   },
   {
@@ -693,20 +637,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[8. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solution of this equivalent triangular system:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[ 2.  3. -1.]\n"
      ]
     }
    ],
    "source": [
-    "print np.linalg.solve(A,y)"
+    "print(np.linalg.solve(B,z))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solution of the original system:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.  3. -1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.linalg.solve(A,y))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -727,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
