--- a/Content/gauss-elim-intro.ipynb
+++ b/Content/gauss-elim-intro.ipynb
@@ -34,12 +34,12 @@
    "source": [
     "$$\\mathbf{A} = \\left[\n",
     "\\begin{array}{cccccc}\n",
-    "a_{11} & a_{12} & a_{13} & a_{14} & \\cdots & a_{1M} \\\\\n",
-    "a_{21} & a_{22} & a_{23} & a_{24} & \\cdots & a_{2M} \\\\\n",
-    "a_{31} & a_{32} & a_{33} & a_{34} & \\cdots & a_{3M} \\\\\n",
-    "a_{41} & a_{42} & a_{43} & a_{44} & \\cdots & a_{4M} \\\\\n",
+    "a_{00} & a_{01} & a_{02} & a_{03} & \\cdots & a_{0(N-1)} \\\\\n",
+    "a_{10} & a_{11} & a_{12} & a_{13} & \\cdots & a_{1(N-1)} \\\\\n",
+    "a_{20} & a_{21} & a_{22} & a_{23} & \\cdots & a_{2(N-1)} \\\\\n",
+    "a_{30} & a_{31} & a_{32} & a_{33} & \\cdots & a_{3(N-1)} \\\\\n",
     "\\vdots & \\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "a_{N1} & a_{N2} & a_{N3} & a_{N4} & \\cdots & a_{NN}\n",
+    "a_{(N-1)0} & a_{(N-1)1} & a_{(N-1)2} & a_{(N-1)3} & \\cdots & a_{(N-1)(N-1)}\n",
     "\\end{array}\n",
     "\\right]_{\\, N \\times N} \\: ,$$"
    ]
@@ -50,10 +50,10 @@
    "source": [
     "$$\\mathbf{y} = \\left[\n",
     "\\begin{array}{c}\n",
+    "y_{0} \\\\\n",
     "y_{1} \\\\\n",
-    "y_{2} \\\\\n",
     "\\vdots \\\\\n",
-    "y_{N}\n",
+    "y_{(N-1)}\n",
     "\\end{array}\n",
     "\\right]_{\\, N \\times 1}$$"
    ]
@@ -71,10 +71,10 @@
    "source": [
     "$$\\mathbf{x} = \\left[\n",
     "\\begin{array}{c}\n",
+    "x_{0} \\\\\n",
     "x_{1} \\\\\n",
-    "x_{2} \\\\\n",
     "\\vdots \\\\\n",
-    "x_{N}\n",
+    "x_{(N-1)}\n",
     "\\end{array}\n",
     "\\right]_{\\, N \\times 1} \\: .$$"
    ]
@@ -110,12 +110,12 @@
    "source": [
     "$$\\mathbf{B} = \\left[\n",
     "\\begin{array}{ccccc}\n",
-    "b_{11} & b_{12} & b_{13} & b_{14} & \\cdots & b_{1M} \\\\\n",
-    "0 & b_{22} & b_{23} & b_{24} & \\cdots & b_{2M} \\\\\n",
-    "0 & 0 & b_{33} & b_{34} & \\cdots & b_{3M} \\\\\n",
-    "0 & 0 & 0 & b_{44} & \\cdots & b_{4M} \\\\\n",
+    "b_{00} & b_{01} & b_{02} & b_{03} & \\cdots & b_{0(N-1)} \\\\\n",
+    "0 & b_{11} & b_{12} & b_{13} & \\cdots & b_{1(N-1)} \\\\\n",
+    "0 & 0 & b_{22} & b_{23} & \\cdots & b_{2(N-1)} \\\\\n",
+    "0 & 0 & 0 & b_{33} & \\cdots & b_{3(N-1)} \\\\\n",
     "\\vdots & \\vdots & \\vdots &  & \\ddots & \\vdots \\\\\n",
-    "0 & 0 & 0 & 0 & \\cdots & b_{NN}\n",
+    "0 & 0 & 0 & 0 & \\cdots & b_{(N-1)(N-1)}\n",
     "\\end{array}\n",
     "\\right]_{\\, N \\times N}$$"
    ]
@@ -133,10 +133,10 @@
    "source": [
     "$$\\mathbf{z} = \\left[\n",
     "\\begin{array}{c}\n",
+    "z_{0} \\\\\n",
     "z_{1} \\\\\n",
-    "z_{2} \\\\\n",
     "\\vdots \\\\\n",
-    "z_{N}\n",
+    "z_{(N-1)}\n",
     "\\end{array}\n",
     "\\right]_{\\, N \\times 1} \\: .$$"
    ]
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -343,12 +343,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, $\\mathbf{A}^{\\prime}$ and $\\mathbf{y}^{\\prime}$ can also be obtained by directly swapping the rows of $\\mathbf{A}$ and $\\mathbf{y}$, as follows:"
+    "Alternatively, $\\mathbf{A}^{\\prime}$ and $\\mathbf{y}^{\\prime}$ can be obtained by directly swapping the rows of $\\mathbf{A}$ and $\\mathbf{y}$, as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -374,13 +374,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.45 5.23 1.67]\n",
+      "\n",
+      "\n",
+      "[6.45 5.23 1.67]\n"
+     ]
+    }
+   ],
    "source": [
-    "print y_prime\n",
-    "print '\\n'\n",
-    "print y[[1, 0, 2]]"
+    "print(y_prime)\n",
+    "print('\\n')\n",
+    "print(y[[1, 0, 2]])"
    ]
   },
   {
@@ -392,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -465,13 +476,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 3. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "T = np.diag([1., 3., 1.])\n",
     "\n",
-    "print T"
+    "print(T)"
    ]
   },
   {
@@ -483,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,24 +514,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 3. 2.]\n",
+      " [7. 4. 9.]\n",
+      " [8. 6. 5.]]\n",
+      "\n",
+      "\n",
+      "[[ 1.  3.  2.]\n",
+      " [21. 12. 27.]\n",
+      " [ 8.  6.  5.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "print A\n",
-    "print '\\n'\n",
-    "print A_prime"
+    "print(A)\n",
+    "print('\\n')\n",
+    "print(A_prime)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.23 6.45 1.67]\n",
+      "\n",
+      "\n",
+      "[ 5.23 19.35  1.67]\n"
+     ]
+    }
+   ],
    "source": [
-    "print y\n",
-    "print '\\n'\n",
-    "print y_prime"
+    "print(y)\n",
+    "print('\\n')\n",
+    "print(y_prime)"
    ]
   },
   {
@@ -522,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,11 +578,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
    "source": [
-    "print x2"
+    "print(x2)"
    ]
   },
   {
@@ -547,11 +602,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
    "source": [
-    "print x"
+    "print(x)"
    ]
   },
   {
@@ -613,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,13 +687,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [3. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "T = np.identity(3) + np.outer(t, u)\n",
     "\n",
-    "print T"
+    "print(T)"
    ]
   },
   {
@@ -642,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,24 +725,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 3. 2.]\n",
+      " [7. 4. 9.]\n",
+      " [8. 6. 5.]]\n",
+      "\n",
+      "\n",
+      "[[ 1.  3.  2.]\n",
+      " [ 7.  4.  9.]\n",
+      " [11. 15. 11.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "print A\n",
-    "print '\\n'\n",
-    "print A_prime"
+    "print(A)\n",
+    "print('\\n')\n",
+    "print(A_prime)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.23 6.45 1.67]\n",
+      "\n",
+      "\n",
+      "[ 5.23  6.45 17.36]\n"
+     ]
+    }
+   ],
    "source": [
-    "print y\n",
-    "print '\\n'\n",
-    "print y_prime"
+    "print(y)\n",
+    "print('\\n')\n",
+    "print(y_prime)"
    ]
   },
   {
@@ -681,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,11 +789,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
    "source": [
-    "print x3"
+    "print(x3)"
    ]
   },
   {
@@ -706,11 +813,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
    "source": [
-    "print x"
+    "print(x)"
    ]
   },
   {
@@ -722,53 +837,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
    "source": [
-    "print x"
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
    "source": [
-    "print x1"
+    "print(x1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
    "source": [
-    "print x2"
+    "print(x2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
    "source": [
-    "print x3"
+    "print(x3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -787,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
