fix some equation numbers

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -520,9 +520,9 @@
     "<a id='eq1'></a>\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\mathbf{A}^{(0)} = \\mathbf{A} & & \\mathbf{y}^{(0)} = \\mathbf{y} \\tag{1a} \\\\\\\\\n",
+    "\\mathbf{A}^{(0)} = \\mathbf{A} & & \\mathbf{y}^{(0)} = \\mathbf{y} \\tag{1a} \\\\\n",
     "\\mathbf{A}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{A}^{(0)} & &\n",
-    "\\mathbf{y}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{y}^{(0)} \\tag{1b} \\\\\\\\\n",
+    "\\mathbf{y}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{y}^{(0)} \\tag{1b} \\\\\n",
     "\\mathbf{A}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{P}^{(2)}\\mathbf{A}^{(1)} & &\n",
     "\\mathbf{y}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{P}^{(2)}\\mathbf{y}^{(1)} \\tag{1c}\n",
     "\\end{align}\n",
@@ -614,8 +614,8 @@
     "<a id='eq2'></a>\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\mathbf{C}^{(0)} &= \\left[ \\: \\mathbf{A} \\: \\vert \\: \\mathbf{y} \\: \\right] \\tag{2a} \\\\\\\\\n",
-    "\\mathbf{C}^{(1)} &= \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{C}^{(0)} \\tag{2b} \\\\\\\\\n",
+    "\\mathbf{C}^{(0)} &= \\left[ \\: \\mathbf{A} \\: \\vert \\: \\mathbf{y} \\: \\right] \\tag{2a} \\\\\n",
+    "\\mathbf{C}^{(1)} &= \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{C}^{(0)} \\tag{2b} \\\\\n",
     "\\mathbf{C}^{(2)} &= \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{P}^{(2)}\\mathbf{C}^{(1)} \\tag{2c}\n",
     "\\end{align}\n",
     "$$"
@@ -1232,11 +1232,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='eq9'></a>\n",
     "$$\n",
-    "\\begin{split}\n",
-    "\\mathbf{A}^{-1} \\mathbf{A} &= \\mathbf{I} \\\\\n",
-    "\\mathbf{A} \\mathbf{A}^{-1} &= \\mathbf{I} \n",
-    "\\end{split} \\: ,\n",
+    "\\begin{align}\n",
+    "\\mathbf{A}^{-1} \\mathbf{A} &= \\mathbf{I} \\tag{9a} \\\\\n",
+    "\\mathbf{A} \\mathbf{A}^{-1} &= \\mathbf{I} \\tag{9b}\n",
+    "\\end{align}\n",
     "$$"
    ]
   },
@@ -1251,17 +1252,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The second equation above can be conveniently rewritten by using a column partition given by:"
+    "[Equation 9b](#eq9) can be conveniently rewritten by using a column partition given by:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='eq10'></a>\n",
     "$$\n",
     "\\mathbf{A} \n",
     "\\left[ \\mathbf{A}^{-1}\\left[ \\, : \\, , \\, 0  \\right] \\cdots \\mathbf{A}^{-1} \\left[ \\, : \\, , \\, N-1  \\right]  \\right] = \n",
-    "\\left[ \\mathbf{u}_{0} \\cdots \\mathbf{u}_{N-1} \\right] \\: ,\n",
+    "\\left[ \\mathbf{u}_{0} \\cdots \\mathbf{u}_{N-1} \\right] \\: , \\tag{10}\n",
     "$$"
    ]
   },
@@ -1269,20 +1271,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{u}_{i}$, $i = 1, \\dots, N$, is a $N \\times 1$ vector with all elements equal to zero, except the $i$th element, which is equal to $1$. The vectors $\\mathbf{A}^{-1}\\left[ \\, : \\, , \\, i  \\right]$ and $\\mathbf{u}_{i}$ represent the $i$th column of $\\mathbf{A}^{-1}$ and $\\mathbf{I}$, respectively. This equation can then be separated into $N$ linear systems:"
+    "where $\\mathbf{u}_{i}$, $i = 1, \\dots, N$, is a $N \\times 1$ vector with all elements equal to zero, except the $i$th element, which is equal to $1$. The vectors $\\mathbf{A}^{-1}\\left[ \\, : \\, , \\, i  \\right]$ and $\\mathbf{u}_{i}$ represent the $i$th column of $\\mathbf{A}^{-1}$ and $\\mathbf{I}$, respectively. [Equation 10](#eq10) can then be separated into $N$ linear systems:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='eq11'></a>\n",
     "$$\n",
     "\\begin{split}\n",
     "\\mathbf{A} \\, \\mathbf{A}^{-1} \\left[ \\, : \\, , \\, 0 \\right] &= \\mathbf{u}_{0} \\\\\n",
     "\\mathbf{A} \\, \\mathbf{A}^{-1} \\left[ \\, : \\, , \\, 1 \\right] &= \\mathbf{u}_{1} \\\\\n",
     "\\vdots \\\\\n",
     "\\mathbf{A} \\, \\mathbf{A}^{-1} \\left[ \\, : \\, , \\, N-1 \\right] &= \\mathbf{u}_{N-1}\n",
-    "\\end{split} \\: .\n",
+    "\\end{split} \\: . \\tag{11}\n",
     "$$"
    ]
   },
