small change in text

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, our equivalent triangular system was iteratively calculated according to the following algorithm:"
+    "Our equivalent triangular system can be iteratively calculated according to the following algorithm:"
    ]
   },
   {
