include function Gauss_elim_expanded

--- a/Content/gauss-elim-outer.ipynb
+++ b/Content/gauss-elim-outer.ipynb
@@ -412,7 +412,7 @@
     "where $a^{(k-1)}_{ij}$ is the $ij$ element of the matrix $\\mathbf{A}^{(k-1)}$. In matrix form, the non-null elements of $\\mathbf{t}^{(k)}$ are given by:\n",
     "\n",
     "$$\n",
-    "\\mathbf{t}^{(k)}[k:] = \\frac{1}{\\mathbf{A}[k-1, k-1]} \\mathbf{A}^{(k-1)}[k:] \\quad .\n",
+    "\\mathbf{t}^{(k)}[k:] = \\frac{\\mathbf{A}^{(k-1)}[k: \\, , \\, k-1]}{\\mathbf{A}[k-1, k-1]} \\quad .\n",
     "$$"
    ]
   },
