--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -978,36 +978,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Gaussian elimination with partial pivoting can be implemented as follows:"
+    "The Gaussian elimination with partial pivoting for the particular case in which there is a single data vector $\\mathbf{y}$ can be implemented as follows:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    N = y.size\n",
-    "    assert A.shape[1] == N, 'A columns must be equal to y size'\n",
-    "    \n",
-    "    # create matrix C by stacking A and y\n",
-    "    C = \n",
-    "    \n",
-    "    for k = 1:N-1\n",
-    "        \n",
-    "        # permutation step (computation of C tilde)\n",
-    "        p, C = permut(C, k-1)\n",
-    "        \n",
-    "        # assert the pivot is nonzero\n",
-    "        assert C[k-1,k-1] != 0., 'null pivot!'\n",
-    "        \n",
-    "        # calculate the Gauss multipliers and store them \n",
-    "        # in the lower part of C (equations 5 and 7)\n",
-    "        C[k:,k-1] = \n",
-    "        \n",
-    "        # zeroing of the elements in the ith column (equation 8)\n",
-    "        C[k:,k:] = \n",
+    "    def Gauss_elim(A, y):\n",
+    "        assert A.ndim == 2, 'A must be a matrix'\n",
+    "        assert y.ndim == 1, 'y must be a vector'\n",
+    "        N = A.shape[0]\n",
+    "        assert A.shape[1] == N, 'A must be square'\n",
+    "        assert y.size == N, 'A columns must be equal to y size'\n",
     "\n",
-    "    # return the equivalent triangular system\n",
-    "    return np.triu(C[:,:N]), C[:,N]"
+    "        # create matrix C by stacking A and y\n",
+    "        C = \n",
+    "\n",
+    "        for k = 1:N-1\n",
+    "\n",
+    "            # permutation step (computation of C tilde)\n",
+    "            p, C = permut(C, k-1)\n",
+    "\n",
+    "            # assert the pivot is nonzero\n",
+    "            assert C[k-1,k-1] != 0., 'null pivot!'\n",
+    "\n",
+    "            # calculate the Gauss multipliers and store them \n",
+    "            # in the lower part of C (equations 5 and 7)\n",
+    "            C[k:,k-1] = \n",
+    "\n",
+    "            # zeroing of the elements in the ith column (equation 8)\n",
+    "            C[k:,k:] = \n",
+    "\n",
+    "        # return the equivalent triangular system\n",
+    "        return np.triu(C[:,:N]), C[:,N]"
    ]
   },
   {
@@ -1058,11 +1062,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[9.23 2.25 5.94 4.05 5.39 6.05]\n",
-      " [8.48 6.17 5.23 7.69 5.05 4.46]\n",
-      " [5.67 8.84 8.   3.25 6.27 5.59]\n",
-      " [1.95 3.37 5.89 2.95 2.56 7.03]\n",
-      " [5.23 4.92 4.95 7.6  2.68 7.04]]\n"
+      "[[8.29 4.49 1.36 0.07 2.48 3.76]\n",
+      " [2.5  6.07 0.49 7.91 5.54 0.51]\n",
+      " [9.19 0.45 8.5  6.13 6.36 9.97]\n",
+      " [6.21 7.99 7.52 6.85 7.99 0.41]\n",
+      " [0.17 3.8  8.95 0.41 3.96 1.75]]\n"
      ]
     }
    ],
@@ -1088,11 +1092,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[9.23 2.25 5.94 4.05 5.39 6.05]\n",
-      " [8.48 6.17 5.23 7.69 5.05 4.46]\n",
-      " [5.67 8.84 8.   3.25 6.27 5.59]\n",
-      " [1.95 3.37 5.89 2.95 2.56 7.03]\n",
-      " [5.23 4.92 4.95 7.6  2.68 7.04]]\n"
+      "[[9.19 0.45 8.5  6.13 6.36 9.97]\n",
+      " [2.5  6.07 0.49 7.91 5.54 0.51]\n",
+      " [8.29 4.49 1.36 0.07 2.48 3.76]\n",
+      " [6.21 7.99 7.52 6.85 7.99 0.41]\n",
+      " [0.17 3.8  8.95 0.41 3.96 1.75]]\n"
      ]
     }
    ],
@@ -1109,7 +1113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4]\n"
+      "[2, 1, 0, 3, 4]\n"
      ]
     }
    ],
@@ -1126,11 +1130,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[9.23 2.25 5.94 4.05 5.39 6.05]\n",
-      " [8.48 6.17 5.23 7.69 5.05 4.46]\n",
-      " [5.67 8.84 8.   3.25 6.27 5.59]\n",
-      " [1.95 3.37 5.89 2.95 2.56 7.03]\n",
-      " [5.23 4.92 4.95 7.6  2.68 7.04]]\n"
+      "[[9.19 0.45 8.5  6.13 6.36 9.97]\n",
+      " [2.5  6.07 0.49 7.91 5.54 0.51]\n",
+      " [8.29 4.49 1.36 0.07 2.48 3.76]\n",
+      " [6.21 7.99 7.52 6.85 7.99 0.41]\n",
+      " [0.17 3.8  8.95 0.41 3.96 1.75]]\n"
      ]
     }
    ],
@@ -1139,77 +1143,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 55,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "#### Testing the function `Gauss_elim`"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# define N\n",
+    "N = 7"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# Create a matrix A\n",
     "A = 10*np.random.rand(N,N)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 56,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "# create a vector x\n",
     "x = 3*np.random.rand(N)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "# compute the vector y\n",
     "y = np.dot(A, x)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "# use the Gauss_elim to compute the equivalent triagular system\n",
     "B, z = Gauss_elim(A, y)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "# solve the equivalent triangular system\n",
     "xeq = np.linalg.solve(B, z)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "# compare the true vector x with the computed xeq\n",
+    "# they must be equal to each other\n",
     "np.allclose(x, xeq)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1) In your `my_functions.py` file, create a function called `gauss_elim` to compute the equivalent triangular system. Note that the algorithm shown above uses the function `permut`, receives the matrix `A` and the vector `y` and returns two numpy arrays containing the equivalent triangular system, as well as the Gauss multipliers. \n",
-    "\n",
-    "2) Create a first test in your `test_my_functions.py` file. For this test, create a linear system and the associated equivalent triangular system (do not use the function `gauss_elim`!). Then use the function `gauss_elim` to compute an equivalent triangular system. Finally, compare the true and the computed triangular system. They must be equal to each other.\n",
-    "\n",
-    "3) Create a second test in your `test_my_functions.py` file. In this test, create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `gauss_elim` to compute the equivalent triangular system. Use one of your functions to compute a vector `x1` by solving the equivalent triangular system. Finally, compare the computed vector `x1` and the expected vector `x0`.\n",
-    "\n",
-    "4) In your `test_my_functions.py` file, create a test for the function `permut` presented above. For this test, create a reference input and a reference output. Then, compare the result produced by the function `permut` and the reference output."
    ]
   },
   {
@@ -1225,7 +1219,7 @@
     "collapsed": true
    },
    "source": [
-    "Sometimes, we need to calculate the inverse of a matrix. The inverse of an $N \\times N$ matrix $\\mathbf{A}$ is commonly represented by $\\mathbf{A}^{-1}$. The inverse satisfies:"
+    "Computing the inverse of a matrix is a very important task. The inverse of an $N \\times N$ matrix $\\mathbf{A}$ is commonly represented by $\\mathbf{A}^{-1}$. The inverse satisfies:"
    ]
   },
   {
@@ -1293,7 +1287,134 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This equation shows that each column of the inverse matrix $\\mathbf{A}^{-1}$ can be calculated by solving an independent linear system."
+    "[Equation 11](#eq11) shows that each column of the inverse matrix $\\mathbf{A}^{-1}$ can be calculated by solving an independent linear system. The same strategy used in equations [2a-c](#eq2) can be used here. The difference is that, in the present case, matrix $\\mathbf{C}^{(0)}$ ([equation 2a](#eq2)) is given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq12'></a>\n",
+    "$$\n",
+    "\\mathbf{C}^{(0)} = \\left[ \\: \\mathbf{A} \\: \\vert \\: \\mathbf{I} \\: \\right] \\quad . \\tag{12}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following steps are exactly the same as those shown by equations [2b-c](#eq2)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that, in this case, the Gaussian elimination is computed for more than one data vector. This \"expanded\" Gaussian elimination can be implemented as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    def Gauss_elim_expanded(A, Y):\n",
+    "        assert A.ndim == Y.ndim == 2, 'A and Y must be matrices'\n",
+    "        N = A.shape[0]\n",
+    "        assert A.shape[1] == N, 'A must be square'\n",
+    "        assert Y.shape[0] == N, 'A columns must hav the same size as Y rows'\n",
+    "\n",
+    "        # create matrix C by stacking A and the identity matrix\n",
+    "        C = \n",
+    "\n",
+    "        for k = 1:N-1\n",
+    "\n",
+    "            # permutation step (computation of C tilde)\n",
+    "            p, C = permut(C, k-1)\n",
+    "\n",
+    "            # assert the pivot is nonzero\n",
+    "            assert C[k-1,k-1] != 0., 'null pivot!'\n",
+    "\n",
+    "            # calculate the Gauss multipliers and store them \n",
+    "            # in the lower part of C (equations 5 and 7)\n",
+    "            C[k:,k-1] = \n",
+    "\n",
+    "            # zeroing of the elements in the ith column (equation 8)\n",
+    "            C[k:,k:] = \n",
+    "\n",
+    "        # return the inverse of A\n",
+    "        return C[:,N:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing the function `Gauss_elim_expanded`"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# define N\n",
+    "N = 10"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# Create a matrix A\n",
+    "A = np.random.rand(N,N) + 2*np.identity(N)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# use the Gauss_elim_expanded to compute the expanded equivalent triagular system\n",
+    "B, Z = Gauss_elim_expanded(A, np.identity(N))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# compute the columns of A_inv by iterating over the columns of Z\n",
+    "A_inv = []\n",
+    "for zj in Z.T:\n",
+    "    A_inv.append(np.linalg.solve(B, zj))\n",
+    "A_inv = np.vstack(A_inv).T"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# compare the product A A_inv and the identity matrix\n",
+    "# they must be equal to each other\n",
+    "np.allclose(np.dot(A, A_inv), np.identity(N))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) In your `my_functions.py` file, create a function called `gauss_elim` to compute the equivalent triangular system. Note that the algorithm shown above uses the function `permut`, receives the matrix `A` and the vector `y` and returns two numpy arrays containing the equivalent triangular system, as well as the Gauss multipliers. \n",
+    "\n",
+    "2) Create a first test in your `test_my_functions.py` file. For this test, create a linear system and the associated equivalent triangular system (do not use the function `gauss_elim`!). Then use the function `gauss_elim` to compute an equivalent triangular system. Finally, compare the true and the computed triangular system. They must be equal to each other.\n",
+    "\n",
+    "3) Create a second test in your `test_my_functions.py` file. In this test, create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `gauss_elim` to compute the equivalent triangular system. Use one of your functions to compute a vector `x1` by solving the equivalent triangular system. Finally, compare the computed vector `x1` and the expected vector `x0`.\n",
+    "\n",
+    "4) In your `test_my_functions.py` file, create a test for the function `permut` presented above. For this test, create a reference input and a reference output. Then, compare the result produced by the function `permut` and the reference output."
    ]
   },
   {
@@ -1311,13 +1432,6 @@
     "\n",
     "2) Create two tests in your `test_my_functions.py` file. In the first test, create a matrix `A`, compute its inverse `Ainv` by using the function `mat_inverse` and verify if the products `A Ainv` and `Ainv A` are equal to the identity matrix. The second test must compare the inverse matrix computed by using `mat_inverse` and the inverse matrix computed by using the routine [`numpy.linalg.inv`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html). "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
